@@ -1,3 +1,9 @@
+2003-09-07  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/playmidi.c, timidity/tables.c:
+	  Adjust minor of both meantone tuning and pure intonation
+	  by syntonic comma instead of Pythagoras tuning
+
 2003-09-03  Takashi Iwai <tiwai@suse.de>
 
 	* interface/alsaseq_c.c:
